--- a/assignments/assignment01.Rmd
+++ b/assignments/assignment01.Rmd
@@ -29,27 +29,26 @@ Please upload below two files on Canvas before TBD time:
 
 The dataset we'll be using in this assignment is drawn from the NCRECE [Teacher Professional Development Study (PDS)](https://www.icpsr.umich.edu/web/ICPSR/studies/34848) data. This professional development study was a randomized controlled evaluation of two forms of professional development (PD) - coursework (phase 1) and consultancy (phase 2) - delivered to about 490 early childhood education teachers across the nation. These PD supports aimed to improve teachers' implementation of language/literacy activities and interactions with children, as well as promote gains in children's social and academic development. 
 
-While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether the PD intervention improved children's attendance. The next two assignments will ask you to answer just this question: did the coursework and consultancy PD intervention improve student attendance? 
+While the primary goals of the PD intervention were to improve language and literacy skills, researchers theorized that if teachers became more effective at teaching literacy, they might also improve the quality of their relationships with their students and families. In turn, these improved relationships might lead to other positive effects of the PD intervention. One pair of researchers ([Hanno and Gonzalez, 2020](https://doi.org/10.1080/19345747.2019.1634170)) wanted to learn whether the PD intervention improved student attendance. 
 
-**Sample**. Our dataset is student-level data for 942 preschool children, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.
+The paired assignments 1 and 2 will ask you to answer a few research questions: Were the students less likely to be chronically absent if there teachers participated the consultancy PD intervention? Were the female students less likely to be chronically absent if there teachers participated in the consultancy PD intervention? How about the male students?
+
+**Sample**. Our dataset is student-level data for 942 preschool students, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.
 
 **Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. 
 
 Details on all variables are as follows:
 
- * *childid*, the child's unique identification number.
- * *treat*, treatment condition measure, which is coded 1 if the child's teacher was in the consultancy treatment group, coded 0 if the child's teacher was in the control group.  
- * *absenteeism*, measure of chronic absenteeism, coded 1 if the child missed 10 percent or more school days and 0 if not. 
- * *cgender*, the child's gender, coded 1 for female and 0 for male.
+ * *childid*, the student's unique identification number.
+ * *treat*, treatment condition measure, which is coded 1 if the student's teacher was in the consultancy treatment group, coded 0 if the student's teacher was in the control group.  
+ * *absenteeism*, measure of chronic absenteeism, coded 1 if the student missed 10 percent or more school days and 0 if not. 
+ * *cgender*, the student's gender, coded 1 for female and 0 for male.
 
 ### Assignment Details
 
 #### 1. Read in the dataset
 
-Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Then...
-
-
-Read the data into your R environment. You do not need to include this response in your memo; only in your code.
+Open your RStudio, create a project and save it. Go to the root directory of the project and create a folder named "data". Download the [cat.csv dataset](./data/cat.csv) and store it in the folder "data". Create an Rmd/R file in the project root directory. Read the data into your R environment. You do not need to include this response in your memo; only in your code.
 
 #### 2. Understand the structure of the data
 
@@ -63,14 +62,5 @@ Read the data into your R environment. You do not need to include this response 
 3.1. How many students were in the treatment group? Control group? Provide your response and create a table AND a figure to demonstrate your answer. *Make sure to label all parts of your figure*
 
 3.2. What proportion of students were chronically absent? Provide your response and create a table AND a figure to demonstrate your answer. Does this seem like a large or small proportion? *Make sure to label all parts of your figure*
-
-
-
-
-
-
-
-
-
 
 
