--- a/assignments/assignment05.Rmd
+++ b/assignments/assignment05.Rmd
@@ -34,19 +34,21 @@ Please upload below two files on Canvas before TBD time:
 
 The dataset we'll be using in this assignment is drawn from the third and fourth waves of National Longitudinal Study of Adolescent to Adult Health ([Add Health](https://addhealth.cpc.unc.edu/data/#public-use)) public-use data. Add Health is a longitudinal study of a nationally representative sample of over 20,000 adolescents (the public-use data sample is much smaller in size) who were in grades 7-12 during the 1994-95 school year, containing rich demographic, social, familial, socioeconomic, behavioral, psychosocial, cognitive, and health information. When the third (2001) and fourth (2008) waves took place, the participants were aged from 18-26 and from 24-32.
 
-In their working paper, [Kraft et al (2021)](https://www.edworkingpapers.com/ai21-441) examined an understudied area - the pathway through which mentoring relationship between students and school personnel influences human capital development. Particularly, they found that having a school-based mentor is associated with an increase of 0.24 GPA points at high-school, a full year of additional education, and an increase of $60,600-$92,400 in lifetime earnings. Inspired by their study, we step further and take interested in whether and to what extent having a school-based mentor earlier in their life is also related to these short- and long-term school outcomes. In this final project, we invite you to investigate two research questions, one from the questions 1-3 (using [ah01.csv dataset](./data/ah01.csv)) in Kraft et al paper and one from our further inquiries 4-6 (using [ah02.csv dataset](./data/ah02.csv)), listed below:
+In their working paper, [Kraft et al (2021)](https://www.edworkingpapers.com/ai21-441) examined an understudied area - the pathway through which mentoring relationship between students and school personnel influences human capital development. Particularly, they found that having a school-based mentor is associated with an increase of 0.24 GPA points at high-school, a full year of additional education, and an increase of $60,600-$92,400 in lifetime earnings. Inspired by their study, we step further and take interested in whether and to what extent having a school-based mentor earlier in their life is also related to these short- and long-term school outcomes. In this final project, we invite you to investigate THREE research questions, question 1, one from the questions 2-4 (using [ah01.csv dataset](./data/ah01.csv)) in Kraft et al paper, and one from our further inquiries 5-7 (using [ah02.csv dataset](./data/ah02.csv)). Questions are listed below:
 
-1. Whether and to what extent having a school-based mentor relates to participants' high school overall GPA?
+1. Whether having a school-based mentor relates to whether participants' high school overall GPA above 3.0?
 
-2. Whether and to what extent having a school-based mentor relates to participants' total years of education?
+2. Whether and to what extent having a school-based mentor relates to participants' high school overall GPA?
 
-3. Whether and to what extent having a school-based mentor relates to participants' participant annual earnings?
+3. Whether and to what extent having a school-based mentor relates to participants' total years of education?
 
-4. Whether and to what extent having a school-based mentor earlier in life relates to participants' high school overall GPA?
+4. Whether and to what extent having a school-based mentor relates to participants' participant annual earnings?
 
-5. Whether and to what extent having a school-based mentor earlier in life relates to participants' total years of education?
+5. Whether and to what extent having a school-based mentor earlier in life relates to participants' high school overall GPA?
 
-6. Whether and to what extent having a school-based mentor earlier in life relates to participants' annual earnings?
+6. Whether and to what extent having a school-based mentor earlier in life relates to participants' total years of education?
+
+7. Whether and to what extent having a school-based mentor earlier in life relates to participants' annual earnings?
 
 **Sample**. The dataset you'll be using is individual-level data for Add Health participants who have no missing data on our variables of interested in both waves 3 and 4. Note that for simplifying reasons, we use smaller datasets than Kraft et al does and the measures of predictor and outcome variables are slightly different. Also we do not ask you to fit the fixed-effects models in Kraft et al, therefore all the results you get from this exercise cannot be interpreted as causal effects. 
 
@@ -63,19 +65,20 @@ In their working paper, [Kraft et al (2021)](https://www.edworkingpapers.com/ai2
  * *income_log*, the individual's log-transformed annual earnings (including salary and all types of other incomes). 
  
  * *gpa*, the individual's high school final GPA points.
+ 
+ * *gpa_3*, binary variable coded 1 for individuals whose high school final GPA was above 3.0
 
 ### Assignment Details
 
-Your final project should be delivered in two forms: (a) an R script that we can run without errors, and (b) a 2-3 paragraph write up of the analysis, results, and discussions of your research questions. This writeup should contain the following elements:
+Your final project should be delivered in two forms: (a) an R script that we can run without errors, and (b) a word document that includes 2-3 paragraph write up of the analysis, results, and discussions of EACH of your THREE research questions. For each question, the writeup should contain the following elements:
 
-What are the two research questions you choose to investigate (they has to be one from questions 1-3 and one from 4-6)? What are the predictor variable(s) and outcome variable(s) for each question? 
+ * What is the research question? What are the predictor variable(s) and outcome variable(s)? 
 
-Present the summary statistics of your data in table(s) and describe what you observe.
+ * Present the summary statistics of only the predictor and outcome variables in table(s), which should include the sample size, the mean and standard deviation of continuous variables, and the percentage for each category of categorical variables. Based on the table, describe what you observe.
 
-For each research question, visualize the relationship(s) between the predictor and outcome variables in a plot and describe what you observe. 
+ * Visualize the relationship between the predictor and outcome variables in a plot and describe what you observe. 
 
-For each research question, interpret your results and briefly discuss the substances of your findings.
-
+ * State your null hypothesis and the hypothesis testing you choose. Report and interpret your results and briefly discuss the substances of your findings.
 
 
 
