--- a/slides/EDUC641_1_intro.Rmd
+++ b/slides/EDUC641_1_intro.Rmd
@@ -103,15 +103,23 @@ options(knitr.table.format = "html")
 ---
 # Kinds of statistics
 
-#### Descriptive and inferential
-#### Exploratory and confirmatory
-- In fact, on a continuum
+### Often conceived of as...
+.pull-left[
+### Either descriptive or inferential
+]
+.pull-right[
+### Either exploratory or confirmatory
+]
+
+--
+
+### In fact, on a continuum
 
 ---
 # Research design and statistics
 
 #### This sequence focuses on statistics, but **research design** is AS (MORE?) important
-#### It can be tempting to use statistics to fix poor research design
+#### It can be tempting to use statistical techniques to fix poor research design
 - "You can't fix by analysis what you bungled by design" -Light, Singer & Willett. (1990). *By Design*
 - Make sure you have mastered content from EDUC 612, particularly concepts of: 
  + measurement, internal and external validity
@@ -211,6 +219,8 @@ Examples:
 #### Categorical variable
 - Nominal and ordinal measures
 - Use labels to describe
+
+--
 
 #### Continuous variable
 - Interval and ration measures
