--- a/slides/EDUC641_4_continuous_2.Rmd
+++ b/slides/EDUC641_4_continuous_2.Rmd
@@ -5,8 +5,8 @@ author: "TBD"
 #date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   xaringan::moon_reader:
-    css: ['default','new.css']
-    # self_contained: true
+    css: ['default', 'uo', 'ki-fonts', 'my_custom.css', 'xaringanthemer.css']
+        # self_contained: true
     nature:
       highlightStyle: github
       highlightLines: true
@@ -16,23 +16,33 @@ output:
 
 ```{R, setup, include = F}
 library(pacman)
-p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
+p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra, xaringanthemer)
 
 i_am("slides/EDUC641_4_continuous_2.rmd")
 
-# Define color
+
 red_pink <- "#e64173"
-turquoise <- "#20B2AA"
-orange <- "#FFA500"
-red <- "#fb6107"
-blue <- "#3b3b9a"
-green <- "#8bb174"
-grey_light <- "grey70"
-grey_mid <- "grey50"
-grey_dark <- "grey20"
-purple <- "#6A5ACD"
-slate <- "#314f4f"
-# Dark slate grey: #314f4f
+turquoise = "#20B2AA"
+orange = "#FFA500"
+red = "#fb6107"
+blue = "#3b3b9a"
+green = "#8bb174"
+grey_light = "grey70"
+grey_mid = "grey50"
+grey_dark = "grey20"
+purple = "#6A5ACD"
+slate = "#314f4f"
+
+extra_css <- list(
+  ".red"   = list(color = "red"),
+  ".blue"  =list(color = "blue"),
+  ".red-pink" = list(color= "red_pink"),
+  ".grey-light" = list(color= "grey_light"),
+  ".purple" = list(color = "purple"),
+  ".small" = list("font-size" = "90%"))
+
+write_extra_css(css = extra_css, outfile = "my_custom.css")
+
 
 # Knitr options
 opts_chunk$set(
@@ -67,21 +77,23 @@ options(knitr.table.format = "html")
 - Visualize and substantively interpret residuals resulting from a bivariate regression model
 - Conduct a statistical inference test of the slope and intercept of a bivariate regression model
 - Write R scripts to conduct these analyses
+- Articulate modern critiques of null-hypothesis significance testing framework
+- Describe strategies to improve replicability and generalizability of quantitative research
 
 
 ---
-# A reminder of our motivating question
+# Reminder of our motivating question
 
-### <span style="color:blue"> Do individuals living in countries with more total years of attendance in school experience, on average, higher life expectancy? </span>
+### .blue[Do individuals living in countries with more total years of attendance in school experience, on average, higher life expectancy?]
 
-#### In other words, we are asking are whether the variables *SCHOOLING* and *LIFE_EXPECTANCY* are related.
+#### In other words, we are asking whether the variables *SCHOOLING* and *LIFE_EXPECTANCY* are related.
 
 ---
 # Materials
 
 ### 1. Death penalty data (in file called life_expectancy.csv)
 ### 2. Codebook describing the contents of said data
-### 3. R script available ...
+### 3. R script to conduct the data analytic tasks of the unit
 
 ---
 class: middle, inverse
@@ -133,7 +145,7 @@ summary(who$schooling)
 
 <br>
 
-<span style="color:blue"> *Can you interpret the univariate statistics and displays on this and the previous slides?* </span>
+.blue[*Can you interpret the univariate statistics and displays on this and the previous slides?*]
 
 ---
 # Visualizing the relationship
@@ -169,7 +181,7 @@ biv
 
 Horizontal axis (or *x*-axis) labels the value of the "predictor" *SCHOOLING*. Vertical axis (or *y*-axis) labels the value of the "outcome" *LIFE_EXPECTANCY*
 
-<span style="color:blue"> *Can you interpret the bivariate display? What does it (and does it NOT) say about the relationship between schooling and life expectancy?* </span>
+.blue[*Can you interpret the bivariate display? What does it (and does it NOT) say about the relationship between schooling and life expectancy?*]
 
 ---
 # Visualizing the relationship
@@ -194,7 +206,7 @@ biv_c
 
 --
 
-<span style="color:blue"> *Can you interpret what this display says about the country of Chile?* </span>
+.blue[*Can you interpret what this display says about the country of Chile?*]
 
 ---
 # You try...
@@ -210,7 +222,7 @@ biv_c +
 
 ```
 
-<span style="color:blue"> *Can you interpret what this display says about the country of Egypt?* </span>
+.blue[*Can you interpret what this display says about the country of Egypt?*]
 
 ---
 # What about the relationship?
@@ -218,11 +230,11 @@ biv_c +
 biv
 ```
 
-<span style="color:blue"> *Is there a relationship between SCHOOLING and LIFE_EXPECTANCY? How do you know?* </span>
+.blue[*Is there a relationship between SCHOOLING and LIFE_EXPECTANCY? How do you know?*]
 
 --
 
-<span style="color:blue"> *What kind of line, curve or other construction best summarizes the observed relationship between SCHOOLING and LIFE_EXPECTANCY?* </span>
+.blue[*What kind of line, curve or other construction best summarizes the observed relationship between SCHOOLING and LIFE_EXPECTANCY?*]
 
 ---
 # An aside about the origin
@@ -266,7 +278,7 @@ class: middle, inverse
 biv + geom_smooth(method = lm, se = F)
 ```
 
-<span style="color:red"> *The fitted regression line tells us the best prediction for the values of LIFE_EXPECTANCY.* </span>
+.red[*The fitted regression line tells us the best prediction for the values of LIFE_EXPECTANCY.*]
 
 ---
 # Some intuition
@@ -303,7 +315,7 @@ summary(fit)
 ```
 ---
 # The fitted equation
-```{r, echo=F, fig.height=4}
+```{r, echo=F, fig.height=4, highlight.output = (11:12)}
 fit <- lm(life_expectancy ~ schooling, data=who)
 summary(fit)
 ```
@@ -405,9 +417,9 @@ $$
 \hat{LIFE\_EXPECTANCY} = \color{red}{42.85} + 2.23 * \left( SCHOOLING \right)
 $$
 
-42.85 represents the <span style="color:red"> *estimated intercept*</span>. It tells you the predicted value of $LIFE\_EXPECTANCY$ when $SCHOOLING$ is zero (0)
+42.85 represents the .red[*estimated intercept*]. It tells you the predicted value of $LIFE\_EXPECTANCY$ when $SCHOOLING$ is zero (0)
 
-- <span style="color:blue">*In this context, it doesn't make sense to interpret this. Why?* </span>
+- .blue[*In this context, it doesn't make sense to interpret this. Why?*]
 
 ---
 # The regression equation
@@ -420,7 +432,7 @@ $$
 
 --
 
-2.23 represents the <span style="color:red"> *estimated slope*</span>. It summarizes the relationship between $LIFE\_EXPECTANCY$ and $SCHOOLING$. It tells you the difference in the predicted values of $LIFE\_EXPECTANCY$ *per unit difference* in  $SCHOOLING$.
+2.23 represents the .red[*estimated slope*]. It summarizes the relationship between $LIFE\_EXPECTANCY$ and $SCHOOLING$. It tells you the difference in the predicted values of $LIFE\_EXPECTANCY$ *per unit difference* in  $SCHOOLING$.
 
 --
 
@@ -438,7 +450,7 @@ $$
 
 --
 
-$\color{red}{SCHOOLING}$ represents the <span style="color:red"> *actual values*</span> of the predictor $SCHOOLING$.
+$\color{red}{SCHOOLING}$ represents the .red[*actual values*] of the predictor $SCHOOLING$.
 
 ---
 # Regression inference
@@ -456,7 +468,7 @@ Could we have gotten a slope value of 2.23 by sampling from a population in whic
 
 Could we have gotten a slope value of 2.23 by sampling from a population in which there was **no relationship** between $LIFE\_EXPECTANCY$ and $SCHOOLING$?
 
-```{r, echo=F}
+```{r, echo=F, highlight.output = (11:14)}
 summary(fit)
 ```
 
@@ -467,7 +479,7 @@ As with our previous analysis, R provides us with a *p*-value which can help us 
 ---
 # Regression inference
 
-```{r, echo=F}
+```{r, echo=F, highlight.output = (11:14)}
 summary(fit)
 ```
 
@@ -489,7 +501,7 @@ ggplot(who, aes(x = schooling, y = life_expectancy)) +
 ]
 
 .pull-right[
-> **The story so far** <br> <font size="2"> In our investigation of country-level aggregate measures of schooling and life expectancy, we have found that the average years of schooling in a country is related to the average life expectancy. In particular, when we relate the country-level life expectancy *LIFE_EXPECTANCY* to the country-level mean years of schooling *SCHOOLING*, we find that the trend-line estimated by ordinary-least-squares regression has a slope of 2.23 (*p*<0.0001). This suggesets that two countries that differ in their average years of schooling attainment by 1 year will have, on average, an difference in life expectancy of 2.23 years. Of course, this relationship is far from causal... </font>
+> **The story so far** <br> <font size="2"> In our investigation of country-level aggregate measures of schooling and life expectancy, we have found that the average years of schooling in a country is related to the average life expectancy. In particular, when we relate the country-level life expectancy (*LIFE_EXPECTANCY*) to the country-level mean years of schooling (*SCHOOLING*), we find that the trend-line estimated by ordinary-least-squares regression has a slope of 2.23 (*p*<0.0001). This suggests that two countries that differ in their average years of schooling attainment by 1 year will have, on average, a difference in life expectancy of 2.23 years. Of course, this relationship is far from causal... </font>
 
 ]
 ---
@@ -549,7 +561,7 @@ Actual life expectancy = 85
 
 --
 
-<span style="color:blue"> *What can we say about the country of Chile's average life expectancy, relative to our prediction?*</span> 
+.blue[*What can we say about the country of Chile's average life expectancy, relative to our prediction?*] 
 
 ---
 # Now Egypt
@@ -562,7 +574,7 @@ resid_c +
 ```
 Observed values for Egypt: $LIFE\_EXPECTANCY = 79$; $SCHOOLING = 13.1$ <br>
 
-<span style="color:blue"> Can you calculate the predicted value of *LIFE_EXPECTANCY* for Egypt and compare it to the observed?
+.blue[Can you calculate the predicted value of *LIFE_EXPECTANCY* for Egypt and compare it to the observed?]
 
 ---
 # What is a "residual"?
@@ -606,7 +618,7 @@ sd(who$resid)
 ```
 
 - Standard deviation of the raw residuals can be quite useful in checking our assumptions
- + <span style="color:blue"> *What assumption?* </span>
+ + .blue[*What assumption?*]
  
 ---
 # Residual assumptions
@@ -671,6 +683,32 @@ ggplot(who, aes(x = predict, y = resid)) +
 - The residuals could be roughly contained within a rectangle around the 0 line. 
 - No one residual "stands out" from the basic random pattern of residuals.
 
+---
+# Writing it up
+
+> <font size="2"> In our investigation of country-level aggregate measures of schooling and life expectancy, we have found that the average years of schooling in a country is related to the average life expectancy. In particular, when we relate the country-level life expectancy (*LIFE_EXPECTANCY*) to the country-level mean years of schooling (*SCHOOLING*), we find that the trend-line estimated by ordinary-least-squares regression has a slope of 2.23 (*p*<0.0001). This suggests that two countries that differ in their average years of schooling attainment by 1 year will have, on average, a difference in life expectancy of 2.23 years. Of course, this relationship is far from causal... </font> <br><br>
+
+--
+
+> <font size="2"> An analysis of the residuals from our fitted model suggests that our regression assumptions are reasonably well met and we have appropriately characterized the relationship between schooling and life expectancy. Despite the presence of a few outliers, our residuals are roughly symmetrically distributed around 0. Our fitted regression does seem to underpredict life expectancy for very low levels of schooling. </font>
+
+---
+# Key takeaways
+
+- **Understand your data first**
+ + Summarize and visualize each variable independently
+ + Start with a visual representation of the relationship between your two variables
+ + How you display the relationship will influence your perception of the relationship, but will not change the relationship
+ + Try to describe what a particular observation in your visualized data represents
+- **The regression model represents your hypothesis about the population**
+ + When you fit a regression model, you are estimating *sample* values of *population* parameters that you will not directly observe
+ + The goal of classical regression inference (just as with categorical relationships) is to understand how likely the observed data in your sample are in the presence of no relationship in the unobserved population
+- **The regression model has a "smooth" and a "rough" component to it**
+ + The "smooth" part is the portion of the relationship that your model explains
+ + The "rough" part is the extent to which each observation (and the observations in aggregate) vary from the "smooth" part of your predictions
+ + The "rough" parts (the residuals) provide important information on the extent to which our models satisfy their assumptions
+ 
+.blue[**More on all of this in EDUC 643**]
 
 ---
 class: middle, inverse
