--- a/slides/EDUC641_2_categ_1.Rmd
+++ b/slides/EDUC641_2_categ_1.Rmd
@@ -5,7 +5,7 @@ author: "TBD"
 #date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   xaringan::moon_reader:
-    css: ['default','new.css']
+    css: ['default', 'uo', 'ki-fonts', 'my_custom.css', 'xaringanthemer.css']
     # self_contained: true
     nature:
       highlightStyle: github
@@ -16,23 +16,32 @@ output:
 
 ```{R, setup, include = F}
 library(pacman)
-p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra)
+p_load(here, tidyverse, ggplot2, xaringan, knitr, kableExtra, xaringanthemer)
 
 i_am("slides/EDUC641_2_categ_1.rmd")
 
-# Define color
+
 red_pink <- "#e64173"
-turquoise <- "#20B2AA"
-orange <- "#FFA500"
-red <- "#fb6107"
-blue <- "#3b3b9a"
-green <- "#8bb174"
-grey_light <- "grey70"
-grey_mid <- "grey50"
-grey_dark <- "grey20"
-purple <- "#6A5ACD"
-slate <- "#314f4f"
-# Dark slate grey: #314f4f
+turquoise = "#20B2AA"
+orange = "#FFA500"
+red = "#fb6107"
+blue = "#3b3b9a"
+green = "#8bb174"
+grey_light = "grey70"
+grey_mid = "grey50"
+grey_dark = "grey20"
+purple = "#6A5ACD"
+slate = "#314f4f"
+
+extra_css <- list(
+  ".red"   = list(color = "red"),
+  ".blue"  =list(color = "blue"),
+  ".red-pink" = list(color= "red_pink"),
+  ".grey-light" = list(color= "grey_light"),
+  ".purple" = list(color = "purple"),
+  ".small" = list("font-size" = "90%"))
+
+write_extra_css(css = extra_css, outfile = "my_custom.css")
 
 # Knitr options
 opts_chunk$set(
@@ -56,7 +65,7 @@ options(knitr.table.format = "html")
   include_graphics("Roadmap_1.png")
 ```
 
-<span style="color:blue"> *This unit borrows heavily (with permission) from John B. Willett's course S-010Y* </span>
+.blue[*This unit borrows heavily (with permission) from John B. Willett's course S-010Y*]
 
 ---
 # The story behind the data
@@ -78,11 +87,11 @@ include_graphics("mccleskey.png")
 --
 
 <br>
-<span style="color:blue"> **Our motivating question: Were convicted murderers more likely to be sentenced to death in Georgia if they killed someone Black or if they killed someone White?** </span>
+.blue[**Our motivating question: Were convicted murderers more likely to be sentenced to death in Georgia if they killed someone Black or if they killed someone White?**]
 
 --
 
-<span style="color:red"> *Note: Racial bias may exist in the criminal justice system irrespective of our answer to this question. Exploring such an issue would knit together more complete evidence from multiple research traditions.*</span>
+.red[*Note: Racial bias may exist in the criminal justice system irrespective of our answer to this question. Exploring such an issue would knit together more complete evidence from multiple research traditions.*]
 
 ---
 # Goals of the unit
